<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="match_parent"
        android:id="@+id/ivContactImage"
        android:contentDescription="@string/imageView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txViewNombre"
            android:id="@+id/viewNombre"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txViewTelefono"
            android:id="@+id/viewTelefono"
            android:textSize="12sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txViewDireccion"
            android:id="@+id/viewDireccion"
            android:textSize="12sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txViewEmail"
            android:id="@+id/viewEmail"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>